--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^3.2.10",
     "@material-ui/styles": "^4.10.0",
+    "@sendgrid/client": "^7.6.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -40,7 +41,8 @@
     "react-scripts": "3.4.3",
     "react-scroll": "^1.8.4",
     "react-slick": "^0.28.1",
-    "react-toastify": "^8.1.0"
+    "react-toastify": "^8.1.0",
+    "validator": "^13.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
